[package]
name = "rust-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mktemp = "0.5.1"
syn = { version = "2.0.48", default-features = false, features = ["parsing", "printing", "full", "extra-traits"] }
proc-macro2 = { version = "1.0.75", default-features = false, features = ["span-locations"] }
